# ocrd_hf

./: .gitignore  Dockerfile  README.md  docker-compose.yml  ocrd-tool.json  pyproject.toml  requirements.txt
ocrd_hf/: adapters.py  cli.py  ocrd-tools.json  recognize.py  test.py
